--- a/setup.properties
+++ b/setup.properties
@@ -1,5 +1,12 @@
 org.kie.server.id=kieserver-default
+kie.maven.settings.custom=/home/ec2-user/rhdm-server/settings.xml
+
+# Controller settings for managed mode
 org.kie.server.controller=ws://localhost:8080/decision-central/websocket/controller
 org.kie.server.controller.user=controllerUser
-org.kie.server.controller.pwd=password
-kie.maven.settings.custom=/home/ec2-user/rhdm-server/settings.xml
+
+# Use password from keystore to connect to controller
+kie.keystore.keyStoreURL=file:///home/ec2-user/rhdm-server/sampleKeystore.jceks
+kie.keystore.keyStorePwd=sampleStorepass
+kie.keystore.key.ctrl.alias=controllerUserAlias
+kie.keystore.key.ctrl.pwd=controllerUserKeypass
