--- a/setup.properties
+++ b/setup.properties
@@ -2,3 +2,4 @@ org.uberfire.nio.git.dir=/home/ec2-user/rhdm-central/data
 org.uberfire.metadata.index.dir=/home/ec2-user/rhdm-central/data
 org.uberfire.nio.git.ssh.cert.dir=/home/ec2-user/rhdm-central/data
 org.guvnor.m2repo.dir=/home/ec2-user/rhdm-central/data/repositories/kie
+kie.maven.settings.custom=/home/ec2-user/rhdm-central/settings.xml
