Add org.kie.server.mode property

--- a/setup.properties
+++ b/setup.properties
@@ -1,4 +1,5 @@
 org.kie.server.id=kieserver-default
+org.kie.server.mode=development
 kie.maven.settings.custom=/home/ec2-user/rhdm-server/settings.xml
 
 # Controller settings for managed mode
