Add git hook stub implementation

--- a/setup.properties
+++ b/setup.properties
@@ -1,3 +1,4 @@
+org.uberfire.nio.git.hooks=/home/ec2-user/rhdm-central/git-hooks
 org.uberfire.nio.git.dir=/home/ec2-user/rhdm-central/data
 org.uberfire.metadata.index.dir=/home/ec2-user/rhdm-central/data
 org.uberfire.nio.git.ssh.cert.dir=/home/ec2-user/rhdm-central/data
