--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -10,3 +10,5 @@ jboss_eap_patch_zip:
   - jboss-eap-7.2.2-patch.zip
   - jboss-eap-7.2.3-patch.zip
   - jboss-eap-7.2.4-patch.zip
+
+jboss_eap_user: ec2-user
