Add Ansible role rhdm-server

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -3,7 +3,6 @@
 
 software_repository_url: https://s3-ap-southeast-2.amazonaws.com/public.juliaaano
 
-jboss_eap_dir: jboss-eap-7.2
 jboss_eap_zip: jboss-eap-7.2.0.zip
 jboss_eap_patch_zip:
   - jboss-eap-7.2.1-patch.zip
@@ -12,3 +11,4 @@ jboss_eap_patch_zip:
   - jboss-eap-7.2.4-patch.zip
 
 jboss_eap_user: ec2-user
+jboss_eap_home: "{{ jboss_eap_base }}/jboss-eap-7.2"
