--- a/ansible/roles/jboss-eap/tasks/main.yml
+++ b/ansible/roles/jboss-eap/tasks/main.yml
@@ -6,12 +6,13 @@
 
 - name: install JBoss EAP
   include_tasks: install.yml
-  tags: jboss-install
+  tags: install
 
 - name: patch JBoss EAP
   include_tasks: patch.yml
-  tags: jboss-patch
+  tags: patch
 
-- name: configure JBoss EAP to run as a service
-  include_tasks: service.yml
-  tags: jboss-service
+- name: configure JBoss EAP to run as a service in RHEL7
+  include_tasks: service-rhel7.yml
+  when: (ansible_facts['distribution'] == "RedHat" and ansible_facts['distribution_major_version'] == "7")
+  tags: service
