--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -10,5 +10,7 @@ jboss_eap_patch_zip:
   - jboss-eap-7.2.3-patch.zip
   - jboss-eap-7.2.4-patch.zip
 
+jboss_eap_path: jboss-eap-7.2
+
 jboss_eap_user: ec2-user
-jboss_eap_home: "{{ jboss_eap_base }}/jboss-eap-7.2"
+jboss_eap_home: "{{ ansible_env['HOME'] }}/{{ jboss_eap_path }}"
