--- a/ansible/roles/rhdm-central/tasks/setup.yml
+++ b/ansible/roles/rhdm-central/tasks/setup.yml
@@ -1,4 +1,9 @@
 ---
+- name: create data directory
+  file:
+    path: "{{ rhdm_central_data }}"
+    state: directory
+
 - name: copy settings.xml
   template:
     src: settings.xml.j2
