--- a/ansible/roles/rhdm-central/vars/main.yml
+++ b/ansible/roles/rhdm-central/vars/main.yml
@@ -3,3 +3,4 @@ org_uberfire_metadata_index_dir: "{{ rhdm_central_data }}"
 org_uberfire_nio_git_ssh_cert_dir: "{{ rhdm_central_data }}"
 org_guvnor_m2repo_dir: "{{ rhdm_central_data }}/repositories/kie"
 org_uberfire_nio_git_hooks: "{{ rhdm_central_data }}/git-hooks"
+kie_maven_settings_custom: "{{ rhdm_central_data }}/settings.xml"
