Move jboss run as service tasks to its own role

--- a/ansible/roles/jboss-eap-service/tasks/rhel7.yml
+++ b/ansible/roles/jboss-eap-service/tasks/rhel7.yml
@@ -1,5 +1,6 @@
 ---
 # RHEL 7 tested, run JBoss EAP as a service.
+# Source: https://access.redhat.com/documentation/en-us/red_hat_jboss_enterprise_application_platform/7.2/html/installation_guide/configuring_jboss_eap_to_run_as_a_service
 
 - name: create jboss-eap.conf
   template:
