--- a/ansible/roles/jboss-eap/tasks/patch.yml
+++ b/ansible/roles/jboss-eap/tasks/patch.yml
@@ -4,7 +4,8 @@
     url: "{{ software_repository_url }}/{{ item }}"
     dest: "{{ jboss_eap_temp }}/{{ item }}"
   loop: "{{ jboss_eap_patch_zip }}"
+  ignore_errors: yes
 
 - name: apply JBoss EAP patches
-  command: "{{ jboss_eap_home }}/bin/jboss-cli.sh --command='patch apply {{ jboss_eap_temp }}/{{ item }}'"
-  loop: "{{ jboss_eap_patch_zip }}"
+  command: "{{ jboss_eap_home }}/bin/jboss-cli.sh --command='patch apply {{ item }}'"
+  loop: "{{ query('fileglob', '{{ jboss_eap_temp }}/{{ jboss_eap_patch_pattern }}') | sort }}"
