--- a/ansible/roles/rhdm-central/tasks/main.yml
+++ b/ansible/roles/rhdm-central/tasks/main.yml
@@ -3,15 +3,13 @@
   file:
     path: "{{ rhdm_central_temp }}"
     state: directory
+  tags: [install, setup]
 
-- name: install and deploy RHDM Central (The Workbench) in JBoss EAP
-  include_tasks: install.yml
+- import_tasks: install.yml
   tags: install
 
-- name: setup RHDM in JBoss EAP
-  include_tasks: setup.yml
+- import_tasks: setup.yml
   tags: setup
 
-- name: add users using the basic properties-based realm
-  include_tasks: users.yml
+- import_tasks: users.yml
   tags: users
