Add JAVA_OPTS to jboss-eap-service configuration

--- a/ansible/roles/jboss-eap-service/tasks/rhel7.yml
+++ b/ansible/roles/jboss-eap-service/tasks/rhel7.yml
@@ -23,7 +23,7 @@
 - name: start service jboss-eap-rhel
   service:
     name: jboss-eap-rhel
-    state: started
+    state: restarted
   become: yes
 
 - name: turn on chkconfig service auto start
