Move setup options for port offset and bindings to jboss-eap role

--- a/ansible/roles/jboss-eap/defaults/main.yml
+++ b/ansible/roles/jboss-eap/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 jboss_eap_temp: /tmp/jboss-eap
+
+jboss_bind_address: "${jboss.bind.address:127.0.0.1}"
+jboss_http_port: "${jboss.http.port:8080}"
+jboss_https_port: "${jboss.https.port:8443}"
+jboss_socket_binding_port_offset: "${jboss.socket.binding.port-offset:0}"
