--- a/ansible/roles/jboss-eap/tasks/main.yml
+++ b/ansible/roles/jboss-eap/tasks/main.yml
@@ -3,10 +3,13 @@
   file:
     path: "{{ jboss_eap_temp }}"
     state: directory
-  tags: [install, patch]
+  tags: [install, patch, setup]
 
 - import_tasks: install.yml
   tags: install
 
 - import_tasks: patch.yml
   tags: patch
+
+- import_tasks: setup.yml
+  tags: setup
