Add kieserver managed mode to ansible role

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,5 +1,5 @@
 ---
-# Variables here are applicable to all host groups
+# Variables here are applicable to all host groups.
 
 software_repository_url: https://s3-ap-southeast-2.amazonaws.com/public.juliaaano
 
@@ -13,8 +13,5 @@ jboss_eap_patch_zip:
   - jboss-eap-7.2.5-patch.zip
 
 jboss_eap_path: jboss-eap-7.2
-
-rhdm_server_zip: rhdm-7.5.0-kie-server-ee8.zip
-rhdm_central_zip: rhdm-7.5.0-decision-central-eap7-deployable.zip
 
 jboss_bind_address: "${jboss.bind.address:0.0.0.0}"
