--- a/ansible/group_vars/server.yml
+++ b/ansible/group_vars/server.yml
@@ -1,5 +1,12 @@
 ---
-# Variables here are applicable to RHDM Server host groups
+# Variables here are applicable to RHDM Server host groups.
+
+rhdm_server_zip: rhdm-7.5.0-kie-server-ee8.zip
 
 # These include inherited opts from standalone.conf. Appending of JAVA_OPTS not possible, overwrite only.
 java_opts: "-Xms2048m -Xmx2048m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
+
+# Enable MANAGED mode for the KIE Server.
+#org_kie_server_controller: ws://localhost:8080/decision-central/websocket/controller
+#org_kie_server_controller_user: "controlerUsr"
+#org_kie_server_controller_pwd: "controllerPwd"
