--- a/ansible/roles/rhdm-central/tasks/install.yml
+++ b/ansible/roles/rhdm-central/tasks/install.yml
@@ -11,5 +11,10 @@
     dest: "{{ rhdm_central_temp }}"
     remote_src: yes
 
+- name: remove extracted standalone-full.xml to avoid overwrite
+  file:
+    path: "{{ rhdm_central_temp }}/{{ jboss_eap_path }}/standalone/configuration/standalone-full.xml"
+    state: absent
+
 - name: copy RHDM Central to JBoss EAP
   command: "cp -rf {{ rhdm_central_temp }}/{{ jboss_eap_path }}/. {{ jboss_eap_rhdm_central_home }}/"
