--- a/ansible/roles/rhdm-central/vars/main.yml
+++ b/ansible/roles/rhdm-central/vars/main.yml
@@ -1,3 +1,9 @@
+org_kie_example: "true"
+org_jbpm_designer_perspective: "ruleflow"
+designerdataobjects: "false"
+org_kie_workbench_profile: "FORCE_PLANNER_AND_RULES"
+org_jbpm_server_ext_disabled: "true"
+org_jbpm_ui_server_ext_disabled: "true"
 org_uberfire_nio_git_dir: "{{ rhdm_central_data }}"
 org_uberfire_metadata_index_dir: "{{ rhdm_central_data }}"
 org_uberfire_nio_git_ssh_cert_dir: "{{ rhdm_central_data }}"
