--- a/ansible/roles/rhdm-central/meta/main.yml
+++ b/ansible/roles/rhdm-central/meta/main.yml
@@ -2,5 +2,4 @@
 dependencies:
   - role: jboss-eap
     vars:
-      jboss_eap_home: "{{ jboss_eap_rhdm_central_home }}"
-    tags: jboss-eap
+      jboss_eap_root: "{{ rhdm_central_root }}"
