--- a/ansible/roles/rhdm-server/tasks/install.yml
+++ b/ansible/roles/rhdm-server/tasks/install.yml
@@ -1,29 +1,28 @@
 ---
-- name: download RHDM Server
+- name: download RHDM Server into {{ rhdm_server_temp }}
   get_url:
-    url: "{{ software_repository_url }}/{{ rhdm_server_zip }}"
-    dest: "{{ rhdm_server_temp }}/{{ rhdm_server_zip }}"
-  tags: download
+    url: "{{ rhdm_server_artifact_source }}/{{ rhdm_server_artifact_name }}"
+    dest: "{{ rhdm_server_temp }}/{{ rhdm_server_artifact_name }}"
 
-- name: extract RHDM Server
+- name: extract RHDM Server into {{ rhdm_server_temp }}
   unarchive:
-    src: "{{ rhdm_server_temp }}/{{ rhdm_server_zip }}"
+    src: "{{ rhdm_server_temp }}/{{ rhdm_server_artifact_name }}"
     dest: "{{ rhdm_server_temp }}"
     remote_src: yes
 
-- name: copy SecurityPolicy to JBoss EAP
+- name: copy SecurityPolicy to {{ rhdm_server_home }}/bin/
   copy:
     src: "{{ rhdm_server_temp }}/SecurityPolicy/"
-    dest: "{{ jboss_eap_rhdm_server_home }}/bin/"
+    dest: "{{ rhdm_server_home }}/bin/"
     remote_src: yes
 
-- name: copy kie-server.war to JBoss EAP
+- name: copy kie-server.war to {{ rhdm_server_home }}/standalone/deployments/
   copy:
     src: "{{ rhdm_server_temp }}/kie-server.war"
-    dest: "{{ jboss_eap_rhdm_server_home }}/standalone/deployments/"
+    dest: "{{ rhdm_server_home }}/standalone/deployments/"
     remote_src: yes
 
-- name: create kie-server.war.dodeploy file in JBoss EAP
+- name: create kie-server.war.dodeploy
   file:
-    path: "{{ jboss_eap_rhdm_server_home }}/standalone/deployments/kie-server.war.dodeploy"
+    path: "{{ rhdm_server_home }}/standalone/deployments/kie-server.war.dodeploy"
     state: touch
