--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,17 +1,4 @@
 ---
 # Variables here are applicable to all host groups.
 
-software_repository_url: https://s3-ap-southeast-2.amazonaws.com/public.juliaaano
-
-jboss_eap_zip: jboss-eap-7.2.0.zip
-jboss_eap_patch_pattern: "*-patch.zip"
-jboss_eap_patch_zip:
-  - jboss-eap-7.2.1-patch.zip
-  - jboss-eap-7.2.2-patch.zip
-  - jboss-eap-7.2.3-patch.zip
-  - jboss-eap-7.2.4-patch.zip
-  - jboss-eap-7.2.5-patch.zip
-
-jboss_eap_path: jboss-eap-7.2
-
-jboss_bind_address: "${jboss.bind.address:0.0.0.0}"
+jboss_bind_address_number: 0.0.0.0
