--- a/ansible/group_vars/hybrid.yml
+++ b/ansible/group_vars/hybrid.yml
@@ -1,5 +1,10 @@
 ---
 # Variables here are applicable to hybrid host groups.
 
-rhdm_server_zip: rhdm-7.5.0-kie-server-ee8.zip
-rhdm_central_zip: rhdm-7.5.0-decision-central-eap7-deployable.zip
+rhdm_central_controller_usr: controllerUsr
+rhdm_central_controller_pwd: controllerPwd
+
+# Enable MANAGED mode for the KIE Server.
+org_kie_server_controller: ws://localhost:8180/decision-central/websocket/controller
+org_kie_server_controller_user: "{{ rhdm_central_controller_usr }}"
+org_kie_server_controller_pwd: "{{ rhdm_central_controller_pwd }}"
