--- a/ansible/roles/jboss-eap-service/defaults/main.yml
+++ b/ansible/roles/jboss-eap-service/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-jboss_eap_user: "{{ ansible_user }}"
-java_opts: ""
+jboss_eap_svc_home: "{{ ansible_user_dir }}/jboss-eap"
+jboss_eap_svc_user: "{{ ansible_user }}"
