--- a/ansible/roles/jboss-eap-service/tasks/main.yml
+++ b/ansible/roles/jboss-eap-service/tasks/main.yml
@@ -1,6 +1,12 @@
 ---
 # Run JBoss EAP as a service in different platforms.
 
+- name: check if JBoss EAP home {{ jboss_eap_svc_home }} exists
+  stat:
+    path: "{{ jboss_eap_svc_home }}"
+  register: result
+  failed_when: not result.stat.exists
+
 - name: configure JBoss EAP to run as a service in RHEL7
   include_tasks: rhel7.yml
   when: (ansible_facts['distribution'] == "RedHat" and ansible_facts['distribution_major_version'] == "7")
