--- a/ansible/roles/jboss-eap/defaults/main.yml
+++ b/ansible/roles/jboss-eap/defaults/main.yml
@@ -1,10 +1,22 @@
 ---
-jboss_eap_temp: /tmp/jboss-eap
+jboss_eap_artifact_source: https://s3-ap-southeast-2.amazonaws.com/public.juliaaano/jboss-eap
+jboss_eap_artifact_name: jboss-eap-7.2.0.zip
+jboss_eap_patch_artifact_names:
+  - jboss-eap-7.2.1-patch.zip
+  - jboss-eap-7.2.2-patch.zip
+  - jboss-eap-7.2.3-patch.zip
+  - jboss-eap-7.2.4-patch.zip
+  - jboss-eap-7.2.5-patch.zip
+jboss_eap_patch_artifact_pattern: "*-patch.zip"
 
+# The jboss_eap_path needs to match the directory inside the distro zip file.
+jboss_eap_path: jboss-eap-7.2
+
+jboss_eap_temp: /tmp/jboss-eap
+jboss_eap_root: "{{ ansible_user_dir }}"
+
+# JBoss EAP host/port assignments
+jboss_bind_address_number: 127.0.0.1
 jboss_http_port_number: 8080
 jboss_https_port_number: 8443
-
-jboss_bind_address: "${jboss.bind.address:127.0.0.1}"
-jboss_http_port: "${jboss.http.port:{{ jboss_http_port_number }}}"
-jboss_https_port: "${jboss.https.port:{{ jboss_https_port_number }}}"
-jboss_socket_binding_port_offset: "${jboss.socket.binding.port-offset:0}"
+jboss_socket_binding_port_offset_number: 0
