--- a/ansible/roles/jboss-eap/tasks/main.yml
+++ b/ansible/roles/jboss-eap/tasks/main.yml
@@ -1,15 +1,11 @@
 ---
-- name: create temp installation directory
+- name: create {{ jboss_eap_temp }} installation directory
   file:
     path: "{{ jboss_eap_temp }}"
     state: directory
-  tags: [install, patch, setup]
 
 - import_tasks: install.yml
-  tags: install
 
 - import_tasks: patch.yml
-  tags: patch
 
 - import_tasks: setup.yml
-  tags: setup
