--- a/ansible/roles/rhdm-server/meta/main.yml
+++ b/ansible/roles/rhdm-server/meta/main.yml
@@ -2,7 +2,6 @@
 dependencies:
   - role: jboss-eap
     vars:
-      jboss_eap_home: "{{ jboss_eap_rhdm_server_home }}"
+      jboss_eap_root: "{{ rhdm_server_root }}"
       jboss_http_port_number: "{{ org_kie_server_http_port }}"
       jboss_https_port_number: "{{ org_kie_server_https_port }}"
-    tags: jboss-eap
