--- a/ansible/roles/rhdm-server/tasks/main.yml
+++ b/ansible/roles/rhdm-server/tasks/main.yml
@@ -1,16 +1,12 @@
 ---
-- name: create temp installation directory
+- name: create {{ rhdm_server_temp }} installation directory
   file:
     path: "{{ rhdm_server_temp }}"
     state: directory
-  tags: [setup, install]
 
 - import_tasks: setup.yml
-  tags: setup
 
 - import_tasks: setup-managed.yml
   when: org_kie_server_controller is defined
-  tags: setup
 
 - import_tasks: install.yml
-  tags: install
