--- a/ansible/roles/rhdm-server/tasks/setup.yml
+++ b/ansible/roles/rhdm-server/tasks/setup.yml
@@ -1,21 +1,21 @@
 ---
-- name: create data directory
+- name: create {{ rhdm_server_data }} directory
   file:
     path: "{{ rhdm_server_data }}"
     state: directory
 
-- name: add the kieserver user
-  command: "{{ jboss_eap_rhdm_server_home }}/bin/add-user.sh -a --user {{ rhdm_kieserver_usr }} --password {{ rhdm_kieserver_pwd }} --role kie-server"
+- name: add kieserver user {{ rhdm_server_kieserver_usr }}
+  command: "{{ rhdm_server_home }}/bin/add-user.sh -a --user {{ rhdm_server_kieserver_usr }} --password {{ rhdm_server_kieserver_pwd }} --role kie-server"
 
-- name: copy settings.xml
+- name: create {{ kie_maven_settings_custom }}
   template:
     src: settings.xml.j2
     dest: "{{ kie_maven_settings_custom }}"
 
-- name: copy setup.cli
+- name: create setup.cli
   template:
     src: setup.cli.j2
     dest: "{{ rhdm_server_temp }}/setup.cli"
 
 - name: run setup.cli JBoss configuration
-  command: "{{ jboss_eap_rhdm_server_home }}/bin/jboss-cli.sh --file={{ rhdm_server_temp }}/setup.cli"
+  command: "{{ rhdm_server_home }}/bin/jboss-cli.sh --file={{ rhdm_server_temp }}/setup.cli"
