--- a/ansible/roles/rhdm-server/defaults/main.yml
+++ b/ansible/roles/rhdm-server/defaults/main.yml
@@ -11,6 +11,7 @@ rhdm_server_kieserver_usr: kieserver
 rhdm_server_kieserver_pwd: kieserver
 
 org_kie_server_id: kieserver-default
+org_kie_server_mode: development
 org_kie_server_http_port: 8080
 org_kie_server_https_port: 8443
 org_kie_server_location: "http://{{ inventory_hostname }}:{{ org_kie_server_http_port }}/kie-server/services/rest/server"
