--- a/ansible/group_vars/server.yml
+++ b/ansible/group_vars/server.yml
@@ -8,6 +8,11 @@ jboss_eap_svc_java_opts: "-Xms2048m -Xmx2048m -XX:MetaspaceSize=96M -XX:MaxMetas
 #org_kie_server_mode: production
 
 # Enable MANAGED mode for the KIE Server.
-#org_kie_server_controller: ws://localhost:8080/decision-central/websocket/controller
-#org_kie_server_controller_user: "controlerUsr"
-#org_kie_server_controller_pwd: "controllerPwd"
+#org_kie_server_controller: ws://controller-host:8080/decision-central/websocket/controller
+#org_kie_server_controller_user: controllerUsr
+#org_kie_server_controller_pwd: controllerPwd
+
+# Connect to remote RHDM Central Maven repo.
+#rhdm_server_maven_remote_workbench_repo_url: http://workbench-host:8080/decision-central/maven2/
+#rhdm_server_maven_remote_workbench_repo_usr: adminUser
+#rhdm_server_maven_remote_workbench_repo_pwd: password
