Configure a Maven local repository

--- a/ansible/group_vars/server.yml
+++ b/ansible/group_vars/server.yml
@@ -19,3 +19,8 @@ jboss_eap_svc_java_opts: "-Xms2048m -Xmx2048m -XX:MetaspaceSize=96M -XX:MaxMetas
 
 # Use a Maven Central mirror repository.
 #rhdm_server_maven_mirror_central_repo_url: http://uk.maven.org/maven2
+
+# Configure a Maven local repository.
+#rhdm_server_maven_local_repo_url: http://host:port/repo
+#rhdm_server_maven_local_repo_usr: user
+#rhdm_server_maven_local_repo_pwd: password
