--- a/ansible/group_vars/central.yml
+++ b/ansible/group_vars/central.yml
@@ -6,3 +6,8 @@ jboss_eap_svc_java_opts: "-Xms4096m -Xmx4096m -XX:MetaspaceSize=96M -XX:MaxMetas
 
 # Use a Maven Central mirror repository.
 #rhdm_central_maven_mirror_central_repo_url: http://uk.maven.org/maven2
+
+# Configure a Maven local repository.
+#rhdm_central_maven_local_repo_url: http://host:port/repo
+#rhdm_central_maven_local_repo_usr: user
+#rhdm_central_maven_local_repo_pwd: password
