--- a/ansible/roles/rhdm-server/defaults/main.yml
+++ b/ansible/roles/rhdm-server/defaults/main.yml
@@ -15,3 +15,5 @@ org_kie_server_mode: development
 org_kie_server_http_port: 8080
 org_kie_server_https_port: 8443
 org_kie_server_location: "http://{{ inventory_hostname }}:{{ org_kie_server_http_port }}/kie-server/services/rest/server"
+
+rhdm_server_maven_jboss_enterprise_repo_url: https://maven.repository.redhat.com/ga/
