--- a/ansible/group_vars/central.yml
+++ b/ansible/group_vars/central.yml
@@ -11,3 +11,8 @@ jboss_eap_svc_java_opts: "-Xms4096m -Xmx4096m -XX:MetaspaceSize=96M -XX:MaxMetas
 #rhdm_central_maven_local_repo_url: http://host:port/repo
 #rhdm_central_maven_local_repo_usr: user
 #rhdm_central_maven_local_repo_pwd: password
+
+# Configure the JBoss Enterprise Maven repository.
+#rhdm_central_maven_jboss_enterprise_repo_url: http://host:port/repo
+#rhdm_central_maven_jboss_enterprise_repo_usr: user
+#rhdm_central_maven_jboss_enterprise_repo_pwd: password
