--- a/ansible/roles/rhdm-central/defaults/main.yml
+++ b/ansible/roles/rhdm-central/defaults/main.yml
@@ -11,3 +11,5 @@ rhdm_central_admin_usr: adminUser
 rhdm_central_admin_pwd: password
 rhdm_central_controller_usr: controllerUsr
 rhdm_central_controller_pwd: controllerPwd
+
+rhdm_central_maven_jboss_enterprise_repo_url: https://maven.repository.redhat.com/ga/
